# precept

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DCO  DEPENDENCIES.md  ISSUES.md  LICENSE  NOTICE  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dco.yml  pages.yml
Dev/: CHANGELOG.md  pyproject.toml
Dev/src/precept/: __init__.py  errors.py  types.py
Dev/src/precept/contract/: __init__.py  decorator.py  registry.py  schema.py  yaml_loader.py
Dev/src/precept/evaluator/: __init__.py  engine.py  rules.py
Dev/src/precept/exporters/: __init__.py  base.py  json_exporter.py  otel.py
Dev/src/precept/integrations/: __init__.py
Dev/src/precept/integrations/langgraph/: __init__.py  eval_hook.py  extractor.py  handoff_tool.py  impact.py
Dev/src/precept/scoring/: __init__.py  base.py  embedding_proxy.py
Dev/tests/: conftest.py  test_smoke.py
Dev/tests/integration/: test_demo.py  test_fixtures.py  test_yaml_loader_integration.py
Dev/tests/integration/contract/: test_decorator_yaml_equivalence.py
Dev/tests/integration/evaluator/: test_engine_integration.py
Dev/tests/integration/exporters/: test_otel_integration.py
Dev/tests/integration/integrations/langgraph/: test_langgraph_integration.py
Dev/tests/integration/observatory/: test_observatory.py
Dev/tests/integration/scoring/: test_embedding_proxy_integration.py
Dev/tests/unit/: test_errors.py  test_types.py
Dev/tests/unit/contract/: strategies.py  test_decorator.py  test_registry.py  test_schema.py  test_yaml_loader.py
Dev/tests/unit/evaluator/: test_engine.py  test_rules.py
Dev/tests/unit/exporters/: test_exporters_base.py  test_json.py  test_otel.py
Dev/tests/unit/fixtures/: test_fixtures_schema.py
Dev/tests/unit/integrations/langgraph/: test_eval_hook.py  test_extractor.py  test_handoff_tool.py  test_impact.py
Dev/tests/unit/scoring/: test_base.py  test_embedding_proxy.py
docs/: 404.html  demo_trace.json  index.html
docs/adr/: 0001-contract-ir.md  README.md
examples/: decorator_usage.py  demo.py
examples/contracts/: researcher_to_summariser.yaml  summariser_to_writer.yaml
examples/fixtures/: clean_trace.json  degraded_trace.json
