[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "precept"
version = "0.0.1"
description = "Handoff integrity contracts for multi-agent pipelines."
authors = [{ name = "Gian Prem Rajaram", email = "gianpremr@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
    "hypothesis>=6,<7",
]
docs = []
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
    "hypothesis>=6,<7",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
    "bandit>=1.7,<2",
    "pip-audit>=2.7,<3",
    "pre-commit>=3.7,<5",
]

[project.urls]
Homepage = "https://github.com/gianpremrajaram/precept"
Repository = "https://github.com/gianpremrajaram/precept"
Issues = "https://github.com/gianpremrajaram/precept/issues"
Changelog = "https://github.com/gianpremrajaram/precept/blob/main/Dev/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]
