[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "precept"
version = "0.0.1"
description = "Handoff integrity contracts for multi-agent pipelines."
authors = [{ name = "Gian Prem Rajaram", email = "gianpremr@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.5,<3",
    "pyyaml>=6.0,<7",
    "sentence-transformers>=2.2,<4",
    "numpy>=1.24,<3",
]

[project.optional-dependencies]
test = [
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
    "hypothesis>=6,<7",
]
docs = []
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
    "hypothesis>=6,<7",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
    "bandit>=1.7,<2",
    "pip-audit>=2.7,<3",
    "pre-commit>=3.7,<5",
    "pip-tools>=7.4,<8",
    "types-PyYAML>=6.0,<7",
]

[project.urls]
Homepage = "https://github.com/gianpremrajaram/precept"
Repository = "https://github.com/gianpremrajaram/precept"
Issues = "https://github.com/gianpremrajaram/precept/issues"
Changelog = "https://github.com/gianpremrajaram/precept/blob/main/Dev/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["build", "dist"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # asserts are expected in tests

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/precept"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["sentence_transformers.*", "torch.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
]

[tool.coverage.run]
source = ["src/precept"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
