[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "precept"
version = "0.0.1"
description = "Handoff integrity contracts for multi-agent pipelines."
authors = [{ name = "Gian Prem Rajaram", email = "gianpremr@gmail.com" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.5,<3",
    "pyyaml>=6.0,<7",
    "sentence-transformers>=2.2,<4",
    "numpy>=1.24,<3",
    "langgraph>=0.5,<0.7",
    "langchain-core>=0.3,<1",
]

[project.optional-dependencies]
test = [
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
    "hypothesis>=6,<7",
]
docs = []
# OTel API + SDK are both opt-in: base `pip install precept` stays free of
# OTel surface. Users who export to OTel install `pip install precept[otel]`.
# Rationale recorded in DEPENDENCIES.md §3.2; the import-guard pattern in
# `precept.exporters.otel` handles graceful absence so the API does not need
# to be a runtime dep (which would otherwise add ~1 MB to every base install).
otel = [
    "opentelemetry-api>=1.30,<2",
    "opentelemetry-sdk>=1.30,<2",
]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
    "hypothesis>=6,<7",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
    "bandit>=1.7,<2",
    "pip-audit>=2.7,<3",
    "pre-commit>=3.7,<5",
    "pip-tools>=7.4,<8",
    "types-PyYAML>=6.0,<7",
]
# Browser-based observatory snapshot tests (PRC-022). Opt-in: heavy
# Chromium download (~150 MB) is deliberately *not* in `[dev]` so the
# normal contributor environment stays small. Install with
# `pip install -e .[dev,e2e]` and `playwright install --with-deps chromium`,
# then run `pytest -m e2e`. The default `pytest` run skips these via
# `-m "not e2e"` in `addopts` below.
e2e = [
    "playwright>=1.40,<2",
    "pytest-playwright>=0.4,<1",
]

[project.urls]
Homepage = "https://github.com/gianpremrajaram/precept"
Repository = "https://github.com/gianpremrajaram/precept"
Issues = "https://github.com/gianpremrajaram/precept/issues"
Changelog = "https://github.com/gianpremrajaram/precept/blob/main/Dev/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["build", "dist"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # asserts are expected in tests

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/precept"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["sentence_transformers.*", "torch.*"]
ignore_missing_imports = true

# langgraph is a HIGH-instability runtime dep (DEPENDENCIES.md 4.1). Treat
# its surface as untyped: insulates strict type-checking from API churn and
# keeps mypy green where langgraph is not installed. follow_imports=skip
# makes the treatment uniform whether or not the package is installed in the
# checking environment.
[[tool.mypy.overrides]]
module = ["langgraph.*", "langchain_core.*"]
ignore_missing_imports = true
follow_imports = "skip"

# opentelemetry ships in the `[otel]` extra only (DEPENDENCIES.md §3.2). Base
# installs do not have it, so mypy must not error on missing imports. The
# `precept.exporters.otel` module wraps every OTel symbol behind a runtime
# import guard plus TYPE_CHECKING-only annotations, so treating the surface
# as `Any` here matches the runtime reality on base installs.
[[tool.mypy.overrides]]
module = ["opentelemetry.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# Make Hypothesis strategies in tests/unit/contract/strategies.py importable
# from any test module (the file itself flags PRC-008 and PRC-012 as reuse
# targets). Keep the entry narrow; prefer per-feature shared modules over a
# top-level test helpers package.
pythonpath = ["tests/unit/contract"]
addopts = [
    "--strict-markers",
    "--strict-config",
    # Skip browser-driven observatory tests by default; opt in with
    # `pytest -m e2e`. See `[project.optional-dependencies].e2e`.
    "-m",
    "not e2e",
]
markers = [
    "e2e: browser-driven observatory snapshot tests (PRC-022). Requires the [e2e] extra and `playwright install chromium`.",
]

[tool.coverage.run]
source = ["src/precept"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
